# VenusEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.bat  main.cpp
Core/: Camera.h  Controller.h  Geometry.h  ID.h  Input.h  KeyBuffer.h  LightSource.h  Mesh.h  MouseBuffer.h  Scene.h  SceneLight.h  ShaderProgram.cpp  ShaderProgram.hpp  World.h  WorldAxis.h  main.cpp
Editor/: Application.h  FileReader.h  Gui.h  Time.h  Window.cpp  Window.h
Math/: Degree.cpp  Degree.h  Math.cpp  Math.h  MathHeaders.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Radian.cpp  Radian.h  Random.h  Transform.h  Vec3.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Render/: Framebuffer.h  GeneralShader.frag  GeneralShader.vert  IndexBuffer.h  Renderbuffer.h  Renderer.h  Shader.h  ShaderProgram.h  Texture.h  Vec3.frag  Vec3.vert  VertexArray.h  VertexBuffer.h
